Add CI workflow for coro library
Test coroutines on multiple platforms:
- Linux (x86_64, ARM, RISC-V, LoongArch)
- macOS (Apple Silicon, Intel)
- Windows (x86_64, ARM)
- FreeBSD, NetBSD (via VMs)

Tests both Debug and ReleaseSafe builds with Zig 0.15.2 and master.

Add test-coro build target and -Demit-test-bin option for cross-compilation.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
       timeout-minutes: 5
 
     - name: Build tests
-      run: zig build build-tests --release=safe
+      run: zig build test -Demit-test-bin -Doptimize=ReleaseSafe
       timeout-minutes: 5
 
     - name: Build examples
