--- a/.github/workflows/test-coro.yml
+++ b/.github/workflows/test-coro.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'src/libs/coro/**'
+      - 'src/coro/**'
       - '.github/workflows/test-coro.yml'
   pull_request:
     paths:
-      - 'src/libs/coro/**'
+      - 'src/coro/**'
       - '.github/workflows/test-coro.yml'
 
 jobs:
