--- a/.github/workflows/test-coro.yml
+++ b/.github/workflows/test-coro.yml
@@ -5,10 +5,12 @@ on:
     branches: [ main ]
     paths:
       - 'src/coro/**'
+      - 'src/os/**'
       - '.github/workflows/test-coro.yml'
   pull_request:
     paths:
       - 'src/coro/**'
+      - 'src/os/**'
       - '.github/workflows/test-coro.yml'
 
 jobs:
@@ -16,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        zig_version: ['0.15.2', 'master']
+        zig_version: ['0.15.2']
         optimize: ['Debug', 'ReleaseSafe']
         config:
           - { os: ubuntu-24.04, target: native }
@@ -40,15 +42,6 @@ jobs:
       with:
         version: ${{ matrix.zig_version }}
 
-    - name: Apply NetBSD patch (zig master)
-      if: matrix.zig_version == 'master'
-      shell: bash
-      run: |
-        ZIG_LIB=$(zig env | grep '\.lib_dir' | sed 's/.*"\(.*\)".*/\1/')
-        echo "Zig lib dir: $ZIG_LIB"
-        sed -i.bak 's/_lwp_park = netbsd\._lwp_park/_lwp_park = netbsd.___lwp_park60/' "$ZIG_LIB/std/c.zig"
-        sed -i.bak 's/pub extern "c" fn _lwp_park(/pub extern "c" fn ___lwp_park60(/' "$ZIG_LIB/std/c/netbsd.zig"
-
     - name: Install QEMU
       if: matrix.config.qemu
       run: |
@@ -59,14 +52,14 @@ jobs:
       if: ${{ !matrix.config.vm }}
       shell: bash
       run: >
-        zig build test-coro -Doptimize=${{ matrix.optimize }} --summary all
+        zig build test -Dtest-filter="coro." -Doptimize=${{ matrix.optimize }} --summary all
         ${{ matrix.config.target != 'native' && format('-Dtarget={0}', matrix.config.target) || '' }}
         ${{ matrix.config.qemu && '-fqemu' || '' }}
       timeout-minutes: 10
 
     - name: Build for VM
       if: matrix.config.vm
-      run: zig build test-coro -Doptimize=${{ matrix.optimize }} -Dtarget=${{ matrix.config.target }} -Demit-test-bin
+      run: zig build test -Dtest-filter="coro." -Doptimize=${{ matrix.optimize }} -Dtarget=${{ matrix.config.target }} -Demit-test-bin
       timeout-minutes: 5
 
     - name: Run tests (FreeBSD VM)
