--- a/.github/workflows/test-coro.yml
+++ b/.github/workflows/test-coro.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        zig_version: ['0.15.2']
+        zig_version: ['master']
         optimize: ['Debug', 'ReleaseSafe']
         config:
           - { os: ubuntu-24.04, target: native }
