Pin CI to Zig 0.16.0-dev.2135+7c0b42ba0
Update test.yml, claude.yml, and test-coro.yml to use the specific
Zig version instead of master to ensure reproducible builds.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Setup Zig
       uses: mlugg/setup-zig@v2
       with:
-        version: master
+        version: 0.16.0-dev.2135+7c0b42ba0
 
     - name: Build tests
       run: zig build test --summary all
