Reorganize benchmarks with Tokio and May comparisons
- Rename Rust benchmarks to explicitly indicate runtime (tokio, may)
- Add May coroutine library benchmarks for comparison
- Add run.sh script for running benchmarks
- Rename Zig benchmark targets for consistency
- Update .gitignore for benchmark build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /.zig-cache
 /zig-out
 /test-file
+
+# Benchmark build artifacts
+/benchmarks/target/
+/benchmarks/echo_server_go
+/benchmarks/ping_pong_go
