--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -1,27 +1,25 @@
 [package]
-name = "ping_pong"
+name = "benchmarks"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
+may = "0.3"
+num_cpus = "1.16"
 
 [[bin]]
-name = "ping_pong"
-path = "ping_pong.rs"
+name = "ping_pong_tokio"
+path = "ping_pong_tokio.rs"
 
 [[bin]]
-name = "ping_pong_current_thread"
-path = "ping_pong_current_thread.rs"
+name = "echo_server_tokio"
+path = "echo_server_tokio.rs"
 
 [[bin]]
-name = "yield_only"
-path = "yield_only.rs"
+name = "ping_pong_may"
+path = "ping_pong_may.rs"
 
 [[bin]]
-name = "echo_server"
-path = "echo_server.rs"
-
-[[bin]]
-name = "echo_server_multi"
-path = "echo_server_multi.rs"
+name = "echo_server_may"
+path = "echo_server_may.rs"
