--- a/.github/workflows/test-ev.yml
+++ b/.github/workflows/test-ev.yml
@@ -49,6 +49,8 @@ jobs:
             ${{ matrix.config.target != 'native' && format('-Dtarget={0}', matrix.config.target) || '' }}
         done
       timeout-minutes: 10
+      env:
+        TEST_VERBOSE: true
 
     - name: Build for VM
       if: matrix.config.vm
