--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Setup Zig
       uses: mlugg/setup-zig@v2
       with:
-        version: 0.16.0-dev.2135+7c0b42ba0
+        version: master
 
     - name: Apply Zig stdlib patches
       run: ./patches/apply-zig-patches.sh
