Add 32-bit ARM support
- Implement coroutine context switching for ARM/Thumb architectures
- Add ARM context structure (sp, fp, lr, pc) with 8-byte stack alignment
- Implement switchContext and coroEntry assembly for ARM
- Fix 32-bit platform compatibility issues:
  - Change IoGroup.state from usize to u64 for proper State layout
  - Implement mmap2 and llseek syscalls for 32-bit Linux
  - Add @alignCast for fieldParentPtr on 32-bit platforms
  - Fix WaitNode alignment requirement (>= 4 bytes)
  - Cast io_uring user_data through usize on 32-bit
- Update check.sh with --no-exec flag for build-only mode
- Add arm-linux to CI test-coro workflow
- Update README with ARM architecture support

All coroutine and runtime tests pass on arm-linux-musleabihf under QEMU.

--- a/.github/workflows/test-coro.yml
+++ b/.github/workflows/test-coro.yml
@@ -23,6 +23,7 @@ jobs:
         config:
           - { os: ubuntu-24.04, target: native }
           - { os: ubuntu-24.04-arm, target: native }
+          - { os: ubuntu-latest, target: arm-linux, qemu: true }
           - { os: ubuntu-latest, target: riscv64-linux, qemu: true }
           - { os: ubuntu-latest, target: loongarch64-linux, qemu: true }
           - { os: ubuntu-latest, target: x86_64-freebsd, vm: freebsd }
