--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ theme:
   features:
     - navigation.sections
     - navigation.top
+    - navigation.footer
     - search.suggest
     - search.highlight
     - content.tabs.link
@@ -32,16 +33,13 @@ theme:
 
 nav:
   - Overview: index.md
-  - User Guide:
-    - Tasks: tasks.md
-    - Networking: networking.md
-    - Files: files.md
-    - Synchronization: sync.md
-    - Signals: signals.md
+  - Tutorial:
+    - Getting Started: getting-started.md
+    - Simple TCP Server: tcp-server.md
+    - Simple HTTP Server: http-server.md
   - Reference:
     - API Documentation: apidocs/
   - Project:
-    - FAQ: faq.md
     - Changelog: changelog.md
 
 markdown_extensions:
