Add parallel grep tutorial
This tutorial demonstrates:
- Using channels for inter-task communication
- Worker pool pattern for distributing work
- Multi-threaded execution with .executors = .auto
- File I/O operations
- Memory management across tasks
- Graceful shutdown with channels

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
     - Getting Started: getting-started.md
     - Simple TCP Server: tcp-server.md
     - Simple HTTP Server: http-server.md
+    - Parallel Grep: parallel-grep.md
   - Reference:
     - API Documentation: apidocs/
   - Project:
