Add NTP client tutorial and improve existing tutorials
- Add NTP client example demonstrating UDP sockets, DNS lookup, timeouts, and select
- Add timeout support to UDP socket operations (sendTo/receiveFrom)
- Add format() method to Timeout type
- Add NTP client tutorial to documentation
- Improve tutorial intros with consistent structure
- Convert tutorial code snippets to use mkdocs-material snippet includes
- Remove "Simple" prefix from TCP/HTTP server tutorial titles

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,8 +35,9 @@ nav:
   - Overview: index.md
   - Tutorial:
     - Getting Started: getting-started.md
-    - Simple TCP Server: tcp-server.md
-    - Simple HTTP Server: http-server.md
+    - TCP Server: tcp-server.md
+    - HTTP Server: http-server.md
+    - NTP Client: ntp-client.md
     - Parallel Grep: parallel-grep.md
   - Reference:
     - API Documentation: apidocs/
