Fix LoongArch64 stack unwinding and re-enable tests
- Add ra (link register) to loongarch64 Context structure
- Update switchContext to save/restore ra register
- Set ra to @returnAddress() in setupContext (matches aarch64)
- Create patch for Zig 0.15.x stdlib fp_offset bug
- Add CI script to apply stdlib patches automatically
- Re-enable loongarch64 testing in main CI workflow
- Remove loongarch64 skip from coroutine stack trace test

The root cause was that LoongArch64 follows RISC-V calling convention
where fp points to top of saved register area (saved fp at fp[-2]),
but Zig 0.15.x stdlib was treating it like x86_64/aarch64 (saved fp
at fp[0]). This caused infinite loops in stack unwinding.

Fixed in Zig 0.16+, patch only needed for 0.15.x.

--- a/.github/workflows/test-coro.yml
+++ b/.github/workflows/test-coro.yml
@@ -45,6 +45,9 @@ jobs:
       with:
         version: ${{ matrix.zig_version }}
 
+    - name: Apply Zig stdlib patches
+      run: ./patches/apply-zig-patches.sh
+
     - name: Install QEMU
       if: matrix.config.qemu
       run: |
