--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
   changes:
     runs-on: ubuntu-latest
     outputs:
-      extended: ${{ steps.filter.outputs.extended }}
+      extended: ${{ steps.filter.outputs.extended == 'true' || contains(github.event.head_commit.message, '/CI:extended') }}
     steps:
       - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3
