Add Debug/ReleaseSafe matrix axis to extended CI
Test each target configuration in both Debug and ReleaseSafe modes.
Change check.sh --release from ReleaseFast to ReleaseSafe.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,6 +60,7 @@ jobs:
       fail-fast: false
       matrix:
         zig_version: ['0.15.2']
+        release: [false, true]
         config:
           - { os: ubuntu-24.04, target: native, backends: 'io_uring epoll poll' }
           - { os: ubuntu-24.04-arm, target: native, backends: 'io_uring epoll poll' }
@@ -103,7 +104,8 @@ jobs:
           ./check.sh --full --backend $backend \
             ${{ matrix.config.target != 'native' && format('--target {0}', matrix.config.target) || '' }} \
             ${{ matrix.config.qemu && '--qemu' || '' }} \
-            ${{ matrix.config.vm && '--no-exec' || '' }}
+            ${{ matrix.config.vm && '--no-exec' || '' }} \
+            ${{ matrix.release && '--release' || '' }}
           if [ -n "${{ matrix.config.vm }}" ]; then
             cp zig-out/bin/test zig-out/bin/test-$backend
           fi
