Add Debug/ReleaseSafe matrix axis to extended CI (#330)
* Add Debug/ReleaseSafe matrix axis to extended CI

Test each target configuration in both Debug and ReleaseSafe modes.
Change check.sh --release from ReleaseFast to ReleaseSafe.

* Allow forcing extended CI with [ci:extended] in PR body

* Use debug/release labels for CI matrix mode axis

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
   changes:
     runs-on: ubuntu-latest
     outputs:
-      extended: ${{ steps.filter.outputs.extended }}
+      extended: ${{ steps.filter.outputs.extended || steps.keyword.outputs.extended }}
     steps:
       - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3
@@ -22,6 +22,15 @@ jobs:
               - 'src/ev/**'
               - 'src/os/**'
               - '.github/workflows/test.yml'
+      - name: Check for [ci:extended] in PR body
+        id: keyword
+        if: github.event_name == 'pull_request'
+        run: |
+          if echo "$PR_BODY" | grep -qF '[ci:extended]'; then
+            echo "extended=true" >> "$GITHUB_OUTPUT"
+          fi
+        env:
+          PR_BODY: ${{ github.event.pull_request.body }}
 
   basic:
     needs: changes
@@ -60,6 +69,7 @@ jobs:
       fail-fast: false
       matrix:
         zig_version: ['0.15.2']
+        mode: [debug, release]
         config:
           - { os: ubuntu-24.04, target: native, backends: 'io_uring epoll poll' }
           - { os: ubuntu-24.04-arm, target: native, backends: 'io_uring epoll poll' }
@@ -103,7 +113,8 @@ jobs:
           ./check.sh --full --backend $backend \
             ${{ matrix.config.target != 'native' && format('--target {0}', matrix.config.target) || '' }} \
             ${{ matrix.config.qemu && '--qemu' || '' }} \
-            ${{ matrix.config.vm && '--no-exec' || '' }}
+            ${{ matrix.config.vm && '--no-exec' || '' }} \
+            ${{ matrix.mode == 'release' && '--release' || '' }}
           if [ -n "${{ matrix.config.vm }}" ]; then
             cp zig-out/bin/test zig-out/bin/test-$backend
           fi
